--- a/index.html
+++ b/index.html
@@ -1,13 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Portfolio</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        header{
+            background-color: rgb(243, 107, 130);
+            height: 8vh;
+            color: white;
+        }
+        .firts0{
+            margin-left: 150px; 
+            padding-top: 2vh;
+            font-size: 30px;
+        }
+        .container{
+            background-color: rgb(142, 52, 67);
+            height: 60vh;
+            color: white;
+        }
+        .item1{
+            padding-top: 100px;
+            padding-left: 100px;
+            font-size: 50px;
+        }
+        .item2{
+            padding-left: 100px;
+            
+            
+        }
+        .item3{
+            padding-left: 100px;    
+            padding-top: 30px;
+            font-size: 50px;
+            color: white;   
+        }
+    </style>
 </head>
+
 <body>
-<div>
-    Shariq Ansari
-</div>
+    <div>
+        <header>
+            <p class="firts0">
+            SPORTCLUB
+        </p>
+        </header>
+        <div class="container">
+            <h1 class="item1">Make every <br> move count.</h1>
+            <p class="item2">Belong to a gym that’s driven by hard work, <br> positivity, and major results</p>
+            <p class="item3">
+                <input type="button" value="Join Today" width="20px">
+            </p>
+        </div>
+  
+
 </body>
+
 </html>
